# simu_analysis_cpp

./: CMakeLists.txt  DataWriter.cpp  DataWriter.hpp  imu_process.cpp  imu_process.hpp  imu_process_real.cpp  imu_process_real.hpp  main.cpp  plotting.py  plotting_bis.py  plotting_real.py  plotting_real_enhanced.py  utils.cpp  utils.hpp  utils.py
